--- a/src/main/resources/templates/blog.mustache
+++ b/src/main/resources/templates/blog.mustache
@@ -17,10 +17,11 @@
         <section>
             <header class="article-header">
                 <h2 class="article-title"><a href="/article/{{slug}}">{{title}}</a></h2>
-                <div class="article-meta">By  <strong>{{author.firstname}}</strong>, on <strong>{{addedAt}}</strong></div>
+                <div class="article-meta">By <strong>{{author.firstname}}</strong>, on <strong>{{addedAt}}</strong>
+                </div>
             </header>
             <div class="article-description">
-            {{headline}}
+                {{headline}}
             </div>
         </section>
     {{/articles}}
